# MirrasENGINE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
Benchmark/: README.md
Benchmark/SDL/: CMakeLists.txt  multi_texture.c  multi_textures.c  single_texture.c
Benchmark/SFML/: CMakeLists.txt  multi_texture.cpp  multi_textures.cpp  single_texture.cpp
Benchmark/raylib/: CMakeLists.txt  multi_texture.c  multi_textures.c  single_texture.c
MirrasENGINE/: MainEntryPoint.h
MirrasENGINE/Editor/: imgui.ini
MirrasENGINE/Editor/Assets/: script.lua
MirrasENGINE/Editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  EditorScene.h  Reflection.h
MirrasENGINE/Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  EntityPropertiesPanel.h  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
MirrasENGINE/Editor/src/Widgets/: AddOns.cpp  AddOns.h  Entity.cpp  Entity.h
MirrasENGINE/src/: MirrasENGINE.h
MirrasENGINE/src/Audio/: Audio.cpp  Audio.h
MirrasENGINE/src/Backends/OpenGL/: OpenGLLog.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
MirrasENGINE/src/Core/: AppLayers.cpp  AppLayers.h  Application.cpp  Application.h  Asserts.h  AsyncMacros.h  BasicTypes.h  EventHandler.cpp  EventHandler.h  Fwd.h  Layer.h  Log.h  OSWindow.cpp  OSWindow.h  Timer.h  Utils.h
MirrasENGINE/src/Core/Renderer/: Camera2D.cpp  Camera2D.h  Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
MirrasENGINE/src/Core/Scripting/: ScriptManager.cpp  ScriptManager.h
MirrasENGINE/src/Core/Types/: Basic.h  Integer.h  Reference.h
MirrasENGINE/src/Events/: Event.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
MirrasENGINE/src/Input/: CameraController.cpp  CameraController.h  DeviceCodes.h  Input.cpp  Input.h
MirrasENGINE/src/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  Serializer.cpp  Serializer.h
MirrasENGINE/src/UI/: ImGui.cpp  ImGui.h
MirrasENGINE/src/Utilities/: CameraController.cpp  CameraController.h  Encodings.cpp  Encodings.h  FileDialogs.h  FileIO.cpp  FileIO.h  Random.cpp  Random.h  UUID.cpp  UUID.h
Samples/: CMakeLists.txt
Samples/Animation/assets/: LICENSE.txt
Samples/Animation/src/: Animation.cpp  Animation.h  main.cpp
Samples/Benchmark/src/: Benchmark.cpp  Benchmark.h  main.cpp  multi_textures.cpp  single_texture.cpp
Samples/Playground/: imgui.ini
Samples/Playground/src/: PlaygroundApp.cpp  PlaygroundApp.h  PlaygroundLayer.cpp  PlaygroundLayer.h  SceneExample.cpp  SceneExample.h  main.cpp
cmake/: runtime-selection.cmake
